fixed pagination visibilty and footer padding

--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -3,6 +3,7 @@
   text-align: center;
   color: #9e9e9e;
   line-height: 1.5;
+  padding-bottom: 50px;
 
   h5,
   a {
